# Discord-Bot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: bot.cpp  currency_rate_processor.cpp  currency_rate_processor.hpp  fetch_config_data.cpp  fetch_config_data.hpp  fetch_currency_data.hpp  http_client.cpp  http_client.hpp  scheduler.cpp  scheduler.hpp  token.h
